[package]
name = "audiobook-timeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
itertools = "0.13"
futures-lite = "2"
jiff = { version = "0.1", features = ["serde"] }